made some style changes and fixed some alignment issues and button colours

--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,10 @@
 body {
 	width: 340px;
 	background-color: #13b5ecff;
-    color: white;
-    box-sizing: border-box;
-    padding: 10px;
-    font-family: "Helvetica";
+	color: white;
+	box-sizing: border-box;
+	padding: 10px;
+	font-family: "Helvetica";
 	border-radius: 10px;
 	border: 2px solid #eee;
 }
@@ -30,6 +30,7 @@ body {
 	text-align: center;
 	font-size: 0.8em;
 }
+
 .info a {
 	color: #fff;
 }
@@ -46,25 +47,25 @@ body {
 
 .gasprice-number {
 	font-size: 1.5rem;
-    display: inline-block;
-    text-align: center;
-    width: 100%;
+	display: inline-block;
+	text-align: center;
+	width: 100%;
 }
 
 .gasprice-label {
 	font-size: 0.8rem;
-    display: inline-block;
-    text-align: center;
-    width: 100%;
+	display: inline-block;
+	text-align: center;
+	width: 100%;
 }
 
 .gasprice-wait {
 	font-size: 0.7rem;
 	font-weight: 200;
-    display: inline-block;
-    text-align: center;
-    width: 100%;
-} 
+	display: inline-block;
+	text-align: center;
+	width: 100%;
+}
 
 .selected {
 	background-color: #dc82ff;
@@ -83,6 +84,7 @@ body {
 	padding: 0px;
 	display: flex;
 }
+
 .options ul li {
 	text-align: center;
 	flex: 1;
@@ -118,9 +120,83 @@ body {
 }
 
 .options .settings-column {
-	flex:1.5;
+	flex: 1.5;
 	background-color: #eee;
 	border: 1px solid #fff;
 	border-radius: 5px;
 	color: #444;
+}
+
+/* light button */
+
+.btn-light-fantom {
+	color: #000;
+	background-color: #13b5ecff;
+	border-color: #13b5ecff
+}
+
+.btn-light-fantom:hover {
+	color: #000;
+	background-color: #13b5ecff;
+	border-color: #13b5ecff;
+	box-shadow: 0 0 0 .1rem rgba(255,255,255, 1);
+}
+
+.btn-check:focus+.btn-light-fantom, .btn-light-fantom:focus {
+	color: #000;
+	background-color: #13b5ecff;
+	border-color: #13b5ecff;	
+}
+
+.btn-check:active+.btn-light-fantom, .btn-check:checked+.btn-light-fantom, .btn-light-fantom.active, .btn-light-fantom:active, .show>.btn-light-fantom.dropdown-toggle {
+	color: #000;
+	background-color: #13b5ecff;
+	border-color: #13b5ecff
+}
+
+/* .btn-check:active+.btn-light-fantom:focus, .btn-check:checked+.btn-light-fantom:focus, .btn-light-fantom.active:focus, .btn-light-fantom:active:focus, .show>.btn-light-fantom.dropdown-toggle:focus {
+	box-shadow: 0 0 0 .1rem rgba(255, 255, 255, 1)
+} */
+
+.btn-light-fantom.disabled, .btn-light-fantom:disabled {
+	color: #000;
+	background-color: #13b5ecff;
+	border-color: #13b5ecff
+}
+
+/* dark */
+
+.btn-dark-fantom {
+	color: #fff;
+	background-color: #000;
+	border-color: #000
+}
+
+.btn-dark-fantom:hover {
+	color: #fff;
+	background-color: #000;
+	border-color: #000;
+	box-shadow: 0 0 0 .1rem rgba(255,255,255, 1)
+}
+
+.btn-check:focus+.btn-dark-fantom, .btn-dark-fantom:focus {
+	color: #fff;
+	background-color: #000;
+	border-color: #000;
+}
+
+.btn-check:active+.btn-dark-fantom, .btn-check:checked+.btn-dark-fantom, .btn-dark-fantom.active, .btn-dark-fantom:active, .show>.btn-dark-fantom.dropdown-toggle {
+	color: #fff;
+	background-color: #000;
+	border-color: #000
+}
+
+/* .btn-check:active+.btn-dark-fantom:focus, .btn-check:checked+.btn-dark-fantom:focus, .btn-dark-fantom.active:focus, .btn-dark-fantom:active:focus, .show>.btn-dark-fantom.dropdown-toggle:focus {
+	box-shadow: 0 0 0 .1rem rgba(#13b5ecff, 1)
+} */
+
+.btn-dark-fantom.disabled, .btn-dark-fantom:disabled {
+	color: #fff;
+	background-color: #000;
+	border-color: #000
 }
